# volume-key

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure
contrib/: Makefile.in
debian/: changelog  control  gbp.conf  libvolume-key-dev.install  libvolume-key1.install  python3-volume-key.install  rules  volume-key.install  watch
debian/patches/: Revert-Switch-to-gpg2.patch  python3.8.diff  series
doc/: Makefile.in
lib/: Makefile.in
po/: as.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  de.po  de_CH.po  en_GB.po  es.po  eu.po  fr.po  gu.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  ml.po  mr.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  ta.po  te.po  tr.po  uk.po  volume_key.pot  zh_CN.po  zh_TW.po
python/: Makefile.in
python/python/: Makefile.in  volume_key.py  volume_key_wrap.c
python/python3/: Makefile.in  volume_key_wrap.c
src/: Makefile.in
tests/: Makefile.in
